@@ -25,6 +25,7 @@ require 'boxgrinder-build/plugins/delivery/sftp/sftp-plugin'
 require 'boxgrinder-build/plugins/delivery/ebs/ebs-plugin'
 require 'boxgrinder-build/plugins/delivery/local/local-plugin'
 require 'boxgrinder-build/plugins/delivery/elastichosts/elastichosts-plugin'
+require 'boxgrinder-build/plugins/delivery/openstack/openstack-plugin'
 
 require 'boxgrinder-build/plugins/platform/vmware/vmware-plugin'
 require 'boxgrinder-build/plugins/platform/ec2/ec2-plugin'
