@@ -1,5 +1,7 @@
 v0.10.0
 
+* [BGBUILD-195] Add support for OpenStack
+
 v0.9.6
 
 * [BGBUILD-298] Fedora 16 or newer has networking issue on platforms different than EC2 because of biosdevname not disabled
